[gd_scene load_steps=5 format=3 uid="uid://dlr56hkndvvt0"]

[ext_resource type="Script" path="res://PraxisMapper/MinimizedOffline/MinOfflineTiles.gd" id="1_kadxa"]
[ext_resource type="Script" path="res://PraxisMapper/MinimizedOffline/DrawMinOfflineTile.gd" id="2_5a5q0"]
[ext_resource type="Script" path="res://PraxisMapper/MinimizedOffline/DrawMinOfflineNameTile.gd" id="3_x476w"]
[ext_resource type="Script" path="res://PraxisMapper/MinimizedOffline/DrawMinOfflineTerrainTile.gd" id="4_5es4l"]

[node name="MinOfflineTiles" type="Node2D"]
script = ExtResource("1_kadxa")

[node name="svc" type="SubViewportContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="svc"]
handle_input_locally = false
render_target_update_mode = 4

[node name="fullMap" type="Node2D" parent="svc/SubViewport"]
script = ExtResource("2_5a5q0")

[node name="subcam" type="Camera2D" parent="svc/SubViewport"]
anchor_mode = 0

[node name="svc2" type="SubViewportContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="svc2"]
handle_input_locally = false
render_target_update_mode = 4

[node name="nameMap" type="Node2D" parent="svc2/SubViewport"]
script = ExtResource("3_x476w")

[node name="subcam" type="Camera2D" parent="svc2/SubViewport"]
anchor_mode = 0

[node name="svc3" type="SubViewportContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="svc3"]
handle_input_locally = false
render_target_update_mode = 4

[node name="terrainMap" type="Node2D" parent="svc3/SubViewport"]
script = ExtResource("4_5es4l")

[node name="subcam" type="Camera2D" parent="svc3/SubViewport"]
anchor_mode = 0
